updating burger menu

--- a/css/style.scss
+++ b/css/style.scss
@@ -288,7 +288,7 @@ body {
                 line-height: 59px;
                 background: linear-gradient(109.01deg, #204B89 33%, #498EF2 66%, #498EF2);
                 background-clip: text;
-                -webkit-text-fill-color: transparent;
+                color: transparent;
             }
             .select {
                 position: relative;
@@ -498,7 +498,7 @@ body {
                 line-height: 59px;
                 background: linear-gradient(109.01deg, #CE4A08 33%, #F79D01 66%, #F79D01);
                 background-clip: text;
-                -webkit-text-fill-color: transparent;
+                color: transparent;
             }
             .select {
                 position: relative;
