--- a/css/media/media.scss
+++ b/css/media/media.scss
@@ -233,8 +233,8 @@
             background: #fff;
             left: 0;
             width: 100%;
-            height: 2px;
-            top: 9px;
+            height: 4px;
+            top: 7.5px;
             transition: all 0.3s ease 0s;
         }
         &:before,
@@ -243,7 +243,7 @@
             background: #fff;
             position: absolute;
             width: 100%;
-            height: 2%;
+            height: 4px;
             right: 0;
             transition: all 0.3s ease 0s;
         }
@@ -258,14 +258,13 @@
         }
         &.active:before {
             transform: rotate(45deg);
-            top: 10px;
+            top: 6px;
         }
         &.active:after {
             transform: rotate(-45deg);
             bottom: 10px;
         }
     }
-    
     .header__menu { 
         position: fixed;
         width: 100%;
@@ -395,8 +394,8 @@
             background: #fff;
             left: 0;
             width: 100%;
-            height: 2px;
-            top: 9px;
+            height: 4px;
+            top: 8px;
             transition: all 0.3s ease 0s;
         }
         &.active {
@@ -408,7 +407,7 @@
             background: #fff;
             position: absolute;
             width: 100%;
-            height: 2%;
+            height: 4px;
             right: 0;
             transition: all 0.3s ease 0s;
         }
@@ -423,7 +422,7 @@
         }
         &.active:before {
             transform: rotate(45deg);
-            top: 9px;
+            top: 6px;
         }
         &.active:after {
             transform: rotate(-45deg);
@@ -664,12 +663,20 @@
     .header__burger {
         margin-left: 88%;
         margin-top: -4%;
+        span {
+            height: 3px;
+            top: 7.5px;
+        }
+        &:before,
+        &:after {
+            height: 3px;
+        }
         &.active {
             top: -25px;
         }
         &.active:before {
             transform: rotate(45deg);
-            top: 10px;
+            top: 7px;
         }
         &.active:after {
             transform: rotate(-45deg);
