--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,7 @@ body {
   background: linear-gradient(109.01deg, #204B89 33%, #498EF2 66%, #498EF2);
   -webkit-background-clip: text;
           background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 .page__prices .donate-container .donate-block__vip .select {
   position: relative;
@@ -702,7 +702,7 @@ body {
   background: linear-gradient(109.01deg, #CE4A08 33%, #F79D01 66%, #F79D01);
   -webkit-background-clip: text;
           background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 .page__prices .donate-container .donate-block__admin .select {
   position: relative;
@@ -1493,8 +1493,8 @@ body {
     background: #fff;
     left: 0;
     width: 100%;
-    height: 2px;
-    top: 9px;
+    height: 4px;
+    top: 7.5px;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
   }
@@ -1503,7 +1503,7 @@ body {
     background: #fff;
     position: absolute;
     width: 100%;
-    height: 2%;
+    height: 4px;
     right: 0;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
@@ -1521,7 +1521,7 @@ body {
   .header__burger.active:before {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
-    top: 10px;
+    top: 6px;
   }
   .header__burger.active:after {
     -webkit-transform: rotate(-45deg);
@@ -1675,8 +1675,8 @@ body {
     background: #fff;
     left: 0;
     width: 100%;
-    height: 2px;
-    top: 9px;
+    height: 4px;
+    top: 8px;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
   }
@@ -1688,7 +1688,7 @@ body {
     background: #fff;
     position: absolute;
     width: 100%;
-    height: 2%;
+    height: 4px;
     right: 0;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
@@ -1706,7 +1706,7 @@ body {
   .header__burger.active:before {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
-    top: 9px;
+    top: 6px;
   }
   .header__burger.active:after {
     -webkit-transform: rotate(-45deg);
@@ -1922,13 +1922,20 @@ body {
     margin-left: 88%;
     margin-top: -4%;
   }
+  .header__burger span {
+    height: 3px;
+    top: 7.5px;
+  }
+  .header__burger:before, .header__burger:after {
+    height: 3px;
+  }
   .header__burger.active {
     top: -25px;
   }
   .header__burger.active:before {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
-    top: 10px;
+    top: 7px;
   }
   .header__burger.active:after {
     -webkit-transform: rotate(-45deg);
