--- a/css/media/media.scss
+++ b/css/media/media.scss
@@ -318,7 +318,8 @@
             visibility: hidden;
         }
         .page__main-more {
-            margin-top: 0%;
+            margin-top: 40%;
+            margin-left: -3%;
         }
     }
     .page__rules {
@@ -342,18 +343,14 @@
             margin-top: 5%;
             .donate-block__vip {
                 .privilege__name {
-                    background: #204B89;
-                    background-clip: text;
-                    color: transparent;
+                    color: #204B89;
                 }
             }
             .donate-block__admin {
                 margin-left: 1%;
                 margin-top: 5%;
                 .privilege__name {
-                    background: #CE4A08;
-                    background-clip: text;
-                    color: transparent;
+                    color: #CE4A08;
                 }
             }
         }
@@ -383,6 +380,45 @@
             .btn__item-link_discord {
                 width: 35%;
             }
+        }
+    } 
+}
+@media (max-width: 786px) {
+    .page__main-block {
+        .page__main-more {
+            margin-left: -7%;
+        }
+    }
+    .page__rules {
+        .page__rules_title {
+            font-size: 8rem;
+        }
+    }
+    .page__prices {
+        .price__title {
+            font-size: 10rem;
+        }
+    }
+    .page__contacts {
+        .contacts__title {
+            font-size: 8rem;
+        }
+    } 
+}
+@media (max-width: 628.98px) {
+    .page__rules {
+        .page__rules_title {
+            font-size: 6rem;
+        }
+    }
+    .page__prices {
+        .price__title {
+            font-size: 8rem;
+        }
+    }
+    .page__contacts {
+        .contacts__title {
+            font-size: 6rem;
         }
     } 
 }
@@ -475,7 +511,7 @@
     }
     .page__rules {
         .page__rules_title {
-            font-size: 6rem;
+            font-size: 5rem;
         }
     }
     .page__prices {
@@ -510,7 +546,7 @@
     }
     .page__contacts {
         .contacts__title {
-            font-size: 6rem;
+            font-size: 5rem;
         }
         .contacts-block__buttons {
             .btn__item-link_telegram {
@@ -548,7 +584,7 @@
         
     } 
 }
-@media (max-width: 375px) {
+@media (max-width: 376.98px) {
     .header__menu { 
         height: 10.5%;
         .header__logo {
@@ -664,7 +700,7 @@
         margin-top: 55%;
     }
 }
-@media (max-width: 320.98px) {
+@media (max-width: 336.98px) {
     .header__burger {
         margin-left: 88%;
         margin-top: -4%;
