adaptizing & bug fixes

--- a/css/media/media.scss
+++ b/css/media/media.scss
@@ -73,10 +73,10 @@
             width: 65%;
         }
         .popup__title_vip {
-            background-color: #204B89;
+            color: #204B89;
         }
         .popup__title_admin {
-            background-color: #CE4A08;
+            color: #CE4A08;
         }
     }
     .page__contacts {
@@ -262,7 +262,7 @@
     .header__menu { 
         position: fixed;
         width: 100%;
-        height: 13.5%;
+        height: 140px;
         overflow: auto;
         left: 0;
         background: #12161C;
@@ -359,6 +359,12 @@
         .popup__buttons {
             margin-top: -10%;
             margin-bottom: -10%;
+            .popup__title_vip {
+                color: #204B89;
+            }
+            .popup__title_admin {
+                color: #CE4A08;
+            }
             .popup__buy_btnT {
                 height: 30%;
                 width: 20%;
@@ -471,7 +477,7 @@
         }
     }
     .header__menu { 
-        height: 10.5%;
+        height: 82px;
         .header__logo {
             margin-top: 7%;
             height: 10%;
@@ -517,6 +523,22 @@
     .page__prices {
         .price__title {
             font-size: 8rem;
+        }
+        .donate-container {
+            .donate-block__vip {
+                .privilege-vip__list {
+                    &_item {
+                        font-size: 16px;
+                    }
+                }
+            }
+            .donate-block__admin {
+                .privilege-admin__list {
+                    &_item {
+                        font-size: 16px;
+                    }
+                }
+            }
         }
     }
     .popup {
@@ -586,7 +608,6 @@
 }
 @media (max-width: 376.98px) {
     .header__menu { 
-        height: 10.5%;
         .header__logo {
             margin-top: 8.8%;
             height: 10%;
@@ -645,12 +666,20 @@
                     width: 312px;
                     margin-left: 4.5%;
                 }
+                .line {
+                    margin-left: 2.5%;
+                    width: 332px;
+                }
             }
             .donate-block__admin {
                 width: 352px;
                 .privilege__buy_btn {
                     width: 312px;
                     margin-left: 4.5%;
+                }
+                .line {
+                    margin-left: 2.5%;
+                    width: 332px;
                 }
             }
         }
