updating structure & updating page__footer block

--- a/css/media/media.scss
+++ b/css/media/media.scss
@@ -387,7 +387,12 @@
                 width: 35%;
             }
         }
-    } 
+    }
+    .page__footer {
+        &_link {
+            margin-top: 5%;
+        }
+    }
 }
 @media (max-width: 786px) {
     .page__main-block {
