--- a/css/media/media.scss
+++ b/css/media/media.scss
@@ -161,7 +161,7 @@
     .header__menu { 
         .menu__list {
            top: 5.5%;
-           flex-wrap: nowrap;
+           flex-wrap: wrap;
         }
     }
     .page__main-block {
