--- a/css/media/media.scss
+++ b/css/media/media.scss
@@ -212,6 +212,9 @@
     }
 }
 @media (max-width: 912.98px) {
+    body {
+        background: #09111B;
+    }
     body.lock {
         overflow: hidden;
     }
